# Egiraffe

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  default.nix  docker-compose.yml  eg_config.toml  flake.nix  module.nix  overlay.nix  test.nix
backend/: Cargo.toml  README.md  default.nix  eg_config.toml  tanja_eg_config.toml
backend/.sqlx/: query-002354fe5c4d03bef4488149b1c0d8e629f7c0e959d62b5e163a55f400d84648.json  query-09fe1ffb2e90cacd43ad6635cf56d033e1c760328c5059df08cce1e60b29a7cf.json  query-0a2f47766db58ccf61fb38d5e6aa507b19a4b7f7b189c231db814a48e254ca71.json  query-0a40499a14fb29b1e7912c08879c79699b374419fec256a096c80857073630b1.json  query-0a99d1616132c62c0b89c5c238b064b5f1c8fafc0c5d0957314592812181fed7.json  query-0c480f9fcce02a65cc5823663c44bda9a48b8cfeba4e3084fece2ff4fb015569.json  query-0d886464d792df6605976eebb7a171f195e18373dfd9a1a36b3934e163542478.json  query-0df3d9a52970c47f08ac436a289974242b571802968d5d4d79af18a33af1a4eb.json  query-0f6cb2e638b3516274b5b7d40388af185824d60d787d68c0ac34ca58ad5720c3.json  query-12b09328eac8b47f5b16c93ce896c079cd4a6d8ea81e16dc4f2f64a42c886a7c.json  query-1504e2a56b20824602d7b482d80657a47d6fe48af4ade96bf6a292d28f53ce82.json  query-17425c13d65e17a3b698c90b7717479b7254f082b365af4888a5c089896b373f.json  query-1926521a67baaf49a714955df7e0d470a028b6be355a1e019597c7c8d6f1a2b5.json  query-1a35a141c2d765569bf05cbe5397454033607f30cfe49e762adaf82016636496.json  query-1d8664954282b85b75be6ffae18d95d1ac2aef9b46b3d3768f04185b1839d9d0.json  query-207cecfabc78a1f212f988728b9791157a50ebc8ce65b137f82cc87c04c51f84.json  query-21e57d98c839b87703c4a38952f523f72e26f2bc1dcc7a5d7f22b79f29ffa5ff.json  query-21f836dbb3c8c6a4660c31450628c2d77836c28d692f13a40b4b40dd646a9a36.json  query-2249e0f7e83c1f4fc0d4e531124ae68ec949395034031992339613f16d746754.json  query-2529f95e6476cc3c031566c7dbf6809f72ab58bbba31be9f3d05c5affe4f9145.json  query-27530e4147a700514eb78a35618dcf2d54071ea67354d6f63eae84337ac4bae4.json  query-2770731fee6aa0ca72c0e5bd5a6860d647dc5827294db54ca2e05caaa87ca07b.json  query-28719021fbaf91a53945b195207a49a570b5b4d9bb091d2ab46cd2e1e9a7b413.json  query-28f9ea5cc9c48348050f0dbe12281d2f8ad9b9b27082dbf179b541055d2e426b.json  query-2fe72f09968050840ca0aeef3d503bbf26c8092485d71b2a7a8d60eb615e82c8.json  query-34dd8da60e41dbdfb78114be3a13dfcec3128562cfbaf363ee059c6c279def56.json  query-363e513ccf104f5bdd4920139b169451ff26f52b7274fc7936345fcfbd2b6d16.json  query-3b426e0ae4572b9fdedb94d34445745a975e05c1f0602d9855e1d447a4929eca.json  query-3e146d6a79ac73c79b639a9ad0bfa1fda6a6a84b56c9c1e824379083689978a0.json  query-41808627eff59ddc756247ef9775b2e70d361fddc21c1bc9a60165af2c31e2e6.json  query-43040d2387fe9876b6355ba5843d76028e7597622f9aa8d5e5e8ac3787dc5964.json  query-46adced8ec8fb53da201675bf999a3761082166e10e2b99a1ac4295a99336ee3.json  query-4a3760d20d8bf763a4bf7119b380763574c47a817f3962921d296b1f2b22ac41.json  query-4f08b7ddb850cfdf914f4b1f1121e70aaabfcae222ffdc567092cab0aad8a886.json  query-52381cfb821a28a86097a85c8c2533609f9330971f289d20dc4ef4bf0aa28e66.json  query-558074edf506308a5e8642c064f6600b7648d3dd6ed317b224748c04e772fc29.json  query-572a84fb4ce977faff6aa85594b4a6d1b053c8341c3607ecbd6dacb89a3fc481.json  query-5c0a1935dea94591b4fa82f0e2fa6b4faa49fd4b516ca4116a8ef3a39db22b25.json  query-628c92278baf647685741af279b45a136ddbd7cdc8787f8c80b1856579fb4f58.json  query-650f7e2366fac239d8fd70ef440d602614cca6277ca082ccabf7c78dfad7c1da.json  (+63 more)
backend/migrations/: 0001_initial.sql
backend/src/: conf.rs  constantes.rs  data.rs  import.rs  legacy.rs  main.rs  (+1 more)
(+109 files in other folders)
