[package]
name = "egiraffe"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std", "simple"] }
axum = { version = "0.6.20", features = [
    "http2",
    "macros",
    "ws",
    "tracing",
    "headers",
] }
env_logger = "0.10.0"
justerror = "1.1.0"
log = { version = "0.4.20", features = ["serde", "std"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid"] }
thiserror = "1.0.24"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "zerocopy", "serde"] }
