[package]
name = "egiraffe"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std", "simple"] }
axum = { version = "0.7.4", features = [
    "http2",
    "macros",
    "ws",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
email_address = "0.2.4"
env_logger = "0.11.2"
futures = "0.3.29"
justerror = "1.1.0"
log = { version = "0.4.20", features = ["serde", "std"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "1.0.24"
time = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "zerocopy", "serde"] }
